# p1person

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  VALIDATION.md  attribute_manager.py  build_package.bat  build_package.sh  config_manager.py  logger.py  p1person.prompt  p1person.properties.example  p1person.py  pingone_client.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  test_p1person.py
.github/workflows/: version-bump.yml
