[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1person"
version = "0.2"
description = "PingOne Custom Attribute Management Tool"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["pingone", "ldap", "inetorgperson", "attributes", "identity", "management"]
dependencies = [
    "requests>=2.31.0",
    "cryptography>=41.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/p1person"
Documentation = "https://github.com/yourusername/p1person#readme"
Repository = "https://github.com/yourusername/p1person"
"Bug Tracker" = "https://github.com/yourusername/p1person/issues"

[project.scripts]
p1person = "p1person:main"

[tool.setuptools]
py-modules = ["p1person", "config_manager", "pingone_client", "attribute_manager", "logger"]
